--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-google-maps/api": "^2.19.3",
     "@supabase/supabase-js": "^2.44.3",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
