--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -25,6 +25,8 @@
     "formik": "^2.4.6",
     "gapi-script": "^1.2.0",
     "i": "^0.3.7",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.6.3",
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
