MapMode and Project Page added

--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.1.5",
     "@react-google-maps/api": "^2.19.3",
+    "@react-md/dialog": "^5.1.6",
     "@supabase/supabase-js": "^2.44.3",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
@@ -28,6 +29,7 @@
     "gapi-script": "^1.2.0",
     "heroicons": "^2.1.5",
     "i": "^0.3.7",
+    "lucide-react": "^0.446.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
     "otp-input-react": "^0.3.0",
