--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -36,6 +36,8 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-google-drive-picker": "^1.2.2",
     "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
