--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -46,6 +46,7 @@
     "react-phone-number-input": "^3.4.4",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.24.0",
+    "recharts": "^2.12.7",
     "twilio": "^5.2.2",
     "yup": "^1.4.0"
   },
